@startuml

!includeurl https://raw.githubusercontent.com/statisticsnorway/lds-gsim-client/master/src/main/resources/class-diagram.pumlhttps://raw.githubusercontent.com/statisticsnorway/lds-data-client/master/lds-data-client/src/main/resources/class-diagram.puml

hide BinaryBackend
hide FormatConverter
hide CsvConverter
hide JsonConverter
hide LDS Data Hadoop
hide LDS Data GCS

show DataClient


hide empty members

package "Apollo Android" {
    class ApolloClient
}

package "LDS Data Client" {
    class DataClient
}

package "LDS GSIM Client" {
  interface SchemaConverter {
    convert()
  }
  class GsimClient {
    -configuration
    +readDatasetData(id, token)
    +writeDatasetData(id, records, token)
    +getDataset(id)
  }
  GsimClient o-left- ApolloClient
  SchemaConverter *-- GsimClient

  DataClient --o GsimClient
}

@enduml